--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,10 @@
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "1.132.0",
+    "dotenv": "^10.0.0",
     "jest": "^26.4.2",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "isxx": "^1.0.0-beta.7"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.132.0",
