--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Extract branch name
         shell: bash
-        run: echo "::set-output name=name::${GITHUB_REF#refs/heads/}"
+        run: echo "::set-output name=name::${GITHUB_REF#refs/heads/^^}"
         id: branch
 
       - name: CD
@@ -53,7 +53,7 @@ jobs:
           INFLUX_DB_BUCKET: ${{ secrets[format('INFLUX_DB_BUCKET_{0}', env.STAGE )] }}
           INFLUX_DB_ORG: ${{ secrets[format('INFLUX_DB_ORG_{0}', env.STAGE )] }}
           INFLUX_DB_TOKEN: ${{ secrets[format('INFLUX_DB_TOKEN_{0}', env.STAGE )] }}
-          STAGE: ${{ steps.branch.outputs.name^^ }}
+          STAGE: ${{ steps.branch.outputs.name }}
 
       - name: Deploy
         uses: youyo/aws-cdk-github-actions@v2
@@ -69,5 +69,5 @@ jobs:
           INFLUX_DB_BUCKET: ${{ secrets[format('INFLUX_DB_BUCKET_{0}', env.STAGE )] }}
           INFLUX_DB_ORG: ${{ secrets[format('INFLUX_DB_ORG_{0}', env.STAGE )] }}
           INFLUX_DB_TOKEN: ${{ secrets[format('INFLUX_DB_TOKEN_{0}', env.STAGE )] }}
-          STAGE: ${{ steps.branch.outputs.name^^ }}
+          STAGE: ${{ steps.branch.outputs.name }}
 
