refactor: use secret value via parameter store

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,30 +69,23 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: diff
+          cdk_args: ${{ format('-c environment={0}', steps.branch.outputs.name ) }}
           actions_comment: false
           working_dir: app
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets[format('AWS_ACCESS_KEY_ID_{0}', steps.string.outputs.uppercase )] }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_{0}', steps.string.outputs.uppercase )] }}
           AWS_DEFAULT_REGION: ap-northeast-1
-          INFLUX_DB_BUCKET: ${{ secrets[format('INFLUX_DB_BUCKET_{0}', steps.string.outputs.uppercase )] }}
-          INFLUX_DB_ORG: ${{ secrets[format('INFLUX_DB_ORG_{0}', steps.string.outputs.uppercase )] }}
-          INFLUX_DB_TOKEN: ${{ secrets[format('INFLUX_DB_TOKEN_{0}', steps.string.outputs.uppercase )] }}
-          STAGE: ${{ steps.branch.outputs.name }}
 
       - name: Deploy
         uses: youyo/aws-cdk-github-actions@v2
         with:
           cdk_subcommand: deploy
-          cdk_args: '--require-approval never'
+          cdk_args: ${{ format('--require-approval never -c environment={0}', steps.branch.outputs.name ) }}
           actions_comment: false
           working_dir: app
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets[format('AWS_ACCESS_KEY_ID_{0}', steps.string.outputs.uppercase )] }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_{0}', steps.string.outputs.uppercase )] }}
           AWS_DEFAULT_REGION: ap-northeast-1
-          INFLUX_DB_BUCKET: ${{ secrets[format('INFLUX_DB_BUCKET_{0}', steps.string.outputs.uppercase )] }}
-          INFLUX_DB_ORG: ${{ secrets[format('INFLUX_DB_ORG_{0}', steps.string.outputs.uppercase )] }}
-          INFLUX_DB_TOKEN: ${{ secrets[format('INFLUX_DB_TOKEN_{0}', steps.string.outputs.uppercase )] }}
-          STAGE: ${{ steps.branch.outputs.name }}
 
