--- a/app/package.json
+++ b/app/package.json
@@ -1,27 +1,31 @@
 {
   "name": "app",
   "private": true,
+
   "devDependencies": {
-    "@aws-cdk/assertions": "^1.132.0",
-    "@aws-cdk/aws-events-targets": "^1.132.0",
+    "@aws-cdk/assertions": "^1.134.0",
+    "@aws-cdk/aws-events-targets": "^1.134.0",
     "@swc/core": "^1.2.108",
     "@swc/register": "^0.1.7",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.24",
     "@types/node": "10.17.27",
     "aws-cdk": "^2.0.0",
     "dotenv": "^10.0.0",
-    "jest": "^26.4.2",
-    "typescript": "4.4.4",
-    "isxx": "^1.0.0-beta.7"
+    "isxx": "^1.0.0-beta.7",
+    "jest": "^26.6.3",
+    "swc-jest": "^1.0.2",
+    "typescript": "4.4.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.132.0",
-    "@aws-cdk/aws-dynamodb": "^1.132.0",
-    "@aws-cdk/aws-events": "^1.132.0",
-    "@aws-cdk/aws-lambda": "^1.132.0",
-    "@aws-cdk/aws-logs": "^1.132.0",
-    "@aws-cdk/aws-sam": "^1.132.0",
-    "@aws-cdk/core": "^1.132.0",
+    "@aws-cdk/aws-apigateway": "^1.134.0",
+    "@aws-cdk/aws-dynamodb": "^1.134.0",
+    "@aws-cdk/aws-events": "^1.134.0",
+    "@aws-cdk/aws-iam": "^1.134.0",
+    "@aws-cdk/aws-lambda": "^1.134.0",
+    "@aws-cdk/aws-logs": "^1.134.0",
+    "@aws-cdk/aws-sam": "^1.134.0",
+    "@aws-cdk/aws-ssm": "^1.134.0",
+    "@aws-cdk/core": "^1.134.0",
     "source-map-support": "^0.5.16"
   }
 }
