--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,14 @@ jobs:
 
   release:
     needs: [test]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        deno: [1.16.0]
+        node: 16
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -36,6 +43,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: ${{ matrix.deno }}
 
       - name: Extract branch name
         shell: bash
