--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,8 +73,10 @@ jobs:
         with:
           version: 6.0.2
           run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --prefer-offline, --ignore-scripts]
+            - args: [--frozen-lockfile, --prefer-offline, --ignore-scripts]
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
       - name: cdk diff
         run:
@@ -83,9 +85,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets[format('AWS_ACCESS_KEY_ID_{0}', steps.string.outputs.uppercase )] }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_{0}', steps.string.outputs.uppercase )] }}
           AWS_DEFAULT_REGION: ap-northeast-1
-
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
 
       - name: Deploy
         uses: youyo/aws-cdk-github-actions@v2
