chore: remove debug

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -72,13 +72,11 @@ jobs:
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.23.6
-
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+          run_install: true
 
       - name: cdk diff
         run:
-          pnpm cdk -c environment=$steps.branch.outputs.name diff
+          pnpm cdk -c environment=dev diff
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets[format('AWS_ACCESS_KEY_ID_{0}', steps.string.outputs.uppercase )] }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_{0}', steps.string.outputs.uppercase )] }}
