--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,18 +61,13 @@ jobs:
       - name: CD
         run: cd app
 
-      - name: Cache node_modules
-        uses: actions/cache@v2
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-
-
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.23.6
           run_install: true
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
       - name: cdk diff
         run:
