--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -61,16 +61,23 @@ jobs:
       - name: CD
         run: cd app
 
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.23.6
           run_install: true
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-
       - name: cdk diff
-        run:
+        run: |
+          pwd
+          cd app
           pnpm cdk -c environment=dev diff
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets[format('AWS_ACCESS_KEY_ID_{0}', steps.string.outputs.uppercase )] }}
