--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,21 +76,17 @@ jobs:
 
       - name: cdk diff
         run: |
-          pwd
           cd app
-          pnpm cdk -c environment=dev diff
+          pnpm cdk -c environment=$steps.branch.outputs.name diff
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets[format('AWS_ACCESS_KEY_ID_{0}', steps.string.outputs.uppercase )] }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_{0}', steps.string.outputs.uppercase )] }}
           AWS_DEFAULT_REGION: ap-northeast-1
 
       - name: Deploy
-        uses: youyo/aws-cdk-github-actions@v2
-        with:
-          cdk_subcommand: deploy
-          cdk_args: ${{ format('--require-approval never -c environment={0}', steps.branch.outputs.name ) }}
-          actions_comment: false
-          working_dir: app
+        run: |
+          cd app
+          pnpm cdk -c environment=$steps.branch.outputs.name deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets[format('AWS_ACCESS_KEY_ID_{0}', steps.string.outputs.uppercase )] }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets[format('AWS_SECRET_ACCESS_KEY_{0}', steps.string.outputs.uppercase )] }}
