--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  "editor.defaultFormatter": "denoland.vscode-deno",
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
   "deno.enable": true,
   "deno.suggest.imports.hosts": {
     "https://deno.land": true
